--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=448ae731e3a137b26e93fe8868c2d0dc
+APP_SECRET=dev
 ###< symfony/framework-bundle ###
