--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "postinstall": "npm run build:icons && npm run msw:init"
   },
   "dependencies": {
-    "vue": "^3.4.25",
-    "vue-router": "4.3.0",
     "@casl/ability": "6.7.0",
     "@casl/vue": "2.2.2",
     "@floating-ui/dom": "1.6.1",
@@ -30,6 +28,7 @@
     "@vueuse/core": "10.9.0",
     "@vueuse/math": "10.9.0",
     "apexcharts": "3.46.0",
+    "axios": "^1.6.8",
     "chart.js": "4.4.2",
     "cookie-es": "1.0.0",
     "eslint-plugin-regexp": "2.2.0",
@@ -43,19 +42,18 @@
     "swiper": "11.0.7",
     "ufo": "1.4.0",
     "unplugin-vue-define-options": "1.4.2",
+    "vue": "^3.4.25",
     "vue-chartjs": "5.3.0",
     "vue-flatpickr-component": "11.0.3",
     "vue-i18n": "9.10.1",
     "vue-prism-component": "2.0.0",
+    "vue-router": "4.3.0",
     "vue3-apexcharts": "1.5.2",
     "vue3-perfect-scrollbar": "1.6.1",
     "vuetify": "3.5.2",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.0",
-    "vite-plugin-symfony": "^6.4",
     "@antfu/eslint-config-vue": "0.43.1",
     "@antfu/utils": "0.7.7",
     "@fullcalendar/core": "6.1.11",
@@ -77,6 +75,7 @@
     "@tiptap/extension-superscript": "2.2.4",
     "@tiptap/extension-underline": "2.2.4",
     "@videojs-player/vue": "1.0.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "3.1.0",
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
@@ -102,6 +101,8 @@
     "unplugin-vue-components": "0.26.0",
     "unplugin-vue-router": "0.7.0",
     "video.js": "8.6.0",
+    "vite": "^5.0",
+    "vite-plugin-symfony": "^6.4",
     "vite-plugin-vue-devtools": "7.0.16",
     "vite-plugin-vue-layouts": "0.11.0",
     "vite-plugin-vuetify": "2.0.1",
