--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,12 +13,21 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login
+                username_path: username
+                password_path: password
+                success_handler: App\Security\CustomAuthenticationSuccessHandler
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
         api:
             pattern: ^/api
             stateless: true
             provider: app_user_provider
             jwt: ~
-            entry_point: App\Security\JwtAuthenticationEntryPoint
 
         main:
             lazy: true
@@ -27,8 +36,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        #- { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        #- { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        #TODO Changez le role de /api
+        - { path: ^/api,       roles: PUBLIC_ACCESS }
 
 when@test:
     security:
