--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,6 @@ security:
                 password_path: password
                 success_handler: App\Security\CustomAuthenticationSuccessHandler
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
-
         api:
             pattern: ^/api
             stateless: true
@@ -36,7 +35,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
         #TODO Changez le role de /api
         - { path: ^/api,       roles: PUBLIC_ACCESS }
 
