--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,3 +6,7 @@ vich_uploader:
             uri_prefix: /images/users
             upload_destination: '%kernel.project_dir%/public/images/users'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+        footer_image:
+            uri_prefix: /images/footer
+            upload_destination: '%kernel.project_dir%/public/images/footer'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
