--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    images_base_url: '%env(IMAGES_BASE_URL)%'
 
 services:
     # default configuration for services in *this* file
@@ -17,14 +18,11 @@ services:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
-            - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # TODO A VERIFIER
-    # Explicitement enregistrer le contrôleur UserImageController
-    App\Controller\UserUpdateUserController:
-        public: true
-        tags: [ 'controller.service_arguments' ]
+    App\Controller\:
+        resource: '../src/Controller'
+        tags: ['controller.service_arguments']
 
     App\Security\CustomAuthenticationSuccessHandler:
         arguments:
