--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.8",
     "chart.js": "4.4.2",
     "cookie-es": "1.0.0",
+    "date-fns": "^3.6.0",
     "eslint-plugin-regexp": "2.2.0",
     "jwt-decode": "4.0.0",
     "mapbox-gl": "3.1.2",
