Add reset password function

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/expression-language": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
+        "symfony/mailer": "7.0.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/property-access": "7.0.*",
         "symfony/property-info": "7.0.*",
@@ -32,6 +33,7 @@
         "symfony/twig-bundle": "7.0.*",
         "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*",
+        "tilleuls/forgot-password-bundle": "^1.6",
         "vich/uploader-bundle": "^2.3"
     },
     "config": {
