--- a/.env
+++ b/.env
@@ -37,5 +37,12 @@ JWT_PASSPHRASE=
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
+###> symfony/mailer ###
+MAILER_DSN=smtp://your_gmail_address:your_app_password@smtp.gmail.com:587
+###< symfony/mailer ###
 
 VUE_APP_IMAGES_BASE_URL=http://localhost:8000/public/images
+
+API_BASE_URL=http://www.example.com
+
+
